Fixed dark mode issues

--- a/assets/style/dark-mode.scss
+++ b/assets/style/dark-mode.scss
@@ -1,54 +1,82 @@
-.dark-mode{
-  html {
-    color-scheme: dark;
-  }
-  
-  html,
+.dark-mode {
+  color-scheme: dark;
+
   body {
     background-color: #181a1b;
     border-color: #736b5e;
     color: #e8e6e3;
   }
-  
-  
-  
+
+  table {
+    border-color: #545b5e;
+  }
+
+  ::placeholder {
+    color: #b2aba1;
+  }
+
+  input:-webkit-autofill,
+  textarea:-webkit-autofill,
+  select:-webkit-autofill {
+    background-color: #404400 !important;
+    color: #e8e6e3 !important;
+  }
+
+  ::selection {
+    background-color: #004daa !important;
+    color: #e8e6e3 !important;
+  }
+
+  ::-moz-selection {
+    background-color: #004daa !important;
+    color: #e8e6e3 !important;
+  }
+
   .banner {
     background-color: rgba(0, 0, 0, 0);
-    background-image: linear-gradient(300deg, rgb(130, 17, 18), rgb(130, 17, 19));
+    background-image: linear-gradient(
+      300deg,
+      rgb(130, 17, 18),
+      rgb(130, 17, 19)
+    );
   }
-  
+
   .banner .banner-text {
     color: rgb(232, 230, 227);
   }
-  
+
   button.btn-primary {
     border-color: currentcolor;
     color: rgb(232, 230, 227);
     background-color: rgb(24, 26, 27);
   }
-  
+
   section.counter {
     background-color: rgb(24, 26, 27);
     border-color: rgb(58, 63, 65);
   }
-  
+
   .keyboard {
-    color: #d76363 ;
+    color: #d76363;
   }
-  
+
   section.controller ul select {
     border-color: rgb(140, 130, 115);
   }
-  
+
   .functional-btn .btn-function {
     background-color: rgb(24, 26, 27);
     border-color: rgb(140, 130, 115);
     color: rgb(232, 230, 227);
   }
-  
+
   .footer {
     background-color: rgba(0, 0, 0, 0);
-    background-image: linear-gradient(300deg, rgb(130, 17, 18), rgb(130, 17, 19));
+    background-image: linear-gradient(
+      300deg,
+      rgb(130, 17, 18),
+      rgb(130, 17, 19)
+    );
     color: rgb(232, 230, 227);
   }
 }
